# Consolidate

./: CMakeLists.txt  Consolidate.cpp  Consolidate.h  Cube.cpp  DeviceResources.cpp  DeviceResources.h  Mainclass.cpp  Mainclass.h  Renderer.cpp  Renderer.h  generate.sh
src/: main.cpp
